packages/typ/tests/fixtures/diagnostics/0723_fcm_unpack_with_type_mismatch_07.ml.expected
File "0723_fcm_unpack_with_type_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0723_fcm_unpack_with_type_mismatch_07 is not a valid module name.

File "0723_fcm_unpack_with_type_mismatch_07.ml", line 13, characters 26-36:
13 |   let module N_eta = (val packed_eta : Box_eta with type t = bool) in
                               ^^^^^^^^^^
Error: The value packed_eta has type (module Box_eta)
       but an expression was expected of type
         (module Box_eta with type t = bool)
